## lacunaritycovariance VERSION 1.1-8
Fixed one case of `\link{Hest}` to `\link[spatstat.explore]{Hest}`. 
Fixed setting of seed that wasn't correctly fixed in previous version.

## lacunaritycovariance VERSION 1.1-7
set.seed() used in test to make reliably repeatable.

## lacunaritycovariance VERSION 1.1-6
In the demo `envi` is avoided (`envi` depends on RStoolBox, which has been removed from CRAN).

## lacunaritycovariance VERSION 1.1-5
Changes to demo (and corresponding suggested packages) to use package `terra` instead of `rgdal` and avoid using `maptools`. Package `envi` is now used to obtain a `spatstat` `im` object.

## lacunaritycovariance VERSION 1.1-4
Updates to use the new `spatstat.explore` package instead of the outgoing `spatstat.core` package.

## lacunaritycovariance VERSION 1.1-00
Fixed the numerical features seen in GBL estimates using pair correlation and (uncentred) covariance. These were numerical quadrature issues. gblg() and gblc() now use the cubature package in order for sufficiently accurate integration. These better integration methods take a long time to run. That makes gblcc() the fastest of the new estimators. It doesn't need the higher accuracy numerical integration because centred covariance approaches zero for large vectors.

The default GBL estimator is now the 'pickaH' method for gblcc().

## lacunaritycovariance VERSION 1.0-12

#### SIGNIFICANT USER-VISIBLE CHANGES
  - package maintainer email is now kassel.hingee@gmail.com
  - help pages tidied up, including instructions on using spatstat 'npixel' setting

#### BUG FIXES
  - 'all' option for gbl.cvchat corrected
  - 'collapse.fv' misuse in secondorderprops() corrected

## lacunaritycovariance VERSION 1.0-4

This is the first version of the package 'lacunaritycovariance' released on CRAN. An earlier version of this package appeared with the name 'stationaryracsinference' in the electronic supplements to the paper: