@@ -13,7 +13,6 @@ Thank you for helping to improve lacunaritycovariance. Please feel free to email
 
 ## Files that are machine generated.
 The package contains a number of files that are machine generated:
-  + 'DESCRIPTION' (generated from 'DESCRIPTION_editable'). Please only edit the file 'DESCRIPTION_editable', and then rebuild 'DESCRIPTION'. See below. This system is in place so that small changes in the description of the package don't require heavy manual reformatting of the text flow.
   + 'NAMESPACE'  (by 'roxygen2')
   + All files in 'man/' (generated by roxygen2). Do no edit these files directly, instead edit the corresponding files in 'R/' and then apply 'roxygen2'. See below.
 
@@ -22,13 +21,6 @@ To create all the machine-generated files run from command line:
     R CMD BATCH makeR.R
 
 The R script, makeR.R, combines the following steps for building the DESCRIPTION file and help files:
-  + To generate 'DESCRIPTION' run the following in 'R'
-(in the future this step should be combined with other package building steps):
-
-        library(desc)
-        desc <- description$new("DESCRIPTION_editable")
-        desc2 <- desc$normalize()
-        desc2$write(file = "DESCRIPTION")
 
   + To generate the 'NAMESPACE' file and all files in 'man/' (except 'lacunaritycovariance-package.Rd'), within an R session run:
 
