@@ -1,33 +1,0 @@
-Type: Package
-Package: lacunaritycovariance
-Title: Gliding Box Lacunarity and Other Metrics for 2D Random Closed Sets
-Version: 1.1-7
-Date: 2023-11-02
-Author: Kassel Liam Hingee
-Maintainer: Kassel Liam Hingee <kassel.hingee@gmail.com>
-Description:
-    Functions for estimating the gliding box lacunarity (GBL), covariance, and pair-correlation of a random closed set (RACS) in 2D from a binary coverage map (e.g. presence-absence land cover maps).
-    Contains a number of newly-developed covariance-based estimators of GBL (Hingee et al., 2019) <doi:10.1007/s13253-019-00351-9> and
-    balanced estimators, proposed by Picka (2000) <http://www.jstor.org/stable/1428408>, for covariance, centred covariance, and pair-correlation.
-    Also contains methods for estimating contagion-like properties of RACS and simulating 2D Boolean models.
-    Binary coverage maps are usually represented as raster images with pixel values of TRUE, FALSE or NA, with NA representing unobserved pixels.
-    A demo for extracting such a binary map from a geospatial data format is provided.
-    Binary maps may also be represented using polygonal sets as the foreground, however  for most computations such maps are converted into raster images.
-    The package is based on research conducted during the author's PhD studies.
-URL: https://github.com/kasselhingee/lacunaritycovariance
-License: GPL (>= 2)
-Depends:
-    spatstat (>= 2.0-0),
-Imports:
-    RcppRoll,
-    spatstat.explore (>= 3.0-3),
-    spatstat.geom,
-    spatstat.random
-Suggests:
-    terra,
-    cubature,
-    sf,
-    testthat
-ByteCompile: true
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
